--- a/Lab5/app/src/main/res/layout/fragment_quiz.xml
+++ b/Lab5/app/src/main/res/layout/fragment_quiz.xml
@@ -56,7 +56,7 @@
     <TextView
         android:id="@+id/question"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:paddingHorizontal="20dp"
         android:text="В каком городе лисицы живут на окраинах и иногда появляются в центре?"
